[package]
name = "luna"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
envconfig = "0.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = [
  "fmt",
  "ansi",
  "env-filter",
  "registry",
  "tracing-log",
] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
